# Telegram--card-cheker-

./: .env  .gitignore  .replit  pyproject.toml  replit.md
telegram-card-checker-bot-main/: PROJECT_DOCUMENTATION.md  main.py  requirements.txt
telegram-card-checker-bot-main/plugins/admin/: Refe.py  Refer.py  add_premium.py
telegram-card-checker-bot-main/plugins/users/: Bin.py  generator_cmd.py
telegram-card-checker-bot-main/utilsdf/: cmds_desing.py  db.py  functions.py
